[gd_scene load_steps=8 format=3 uid="uid://co74e8qr20vcd"]

[ext_resource type="Script" uid="uid://b7p42txu1et7a" path="res://scenes/objects/plants/corn.gd" id="1_hgaca"]
[ext_resource type="Texture2D" uid="uid://bohhvcnrtlrtp" path="res://assets/game/objects/basic_plants.png" id="1_hm4is"]
[ext_resource type="PackedScene" uid="uid://btk8jbkgdxsk4" path="res://scenes/components/hurt_component.tscn" id="2_aphyd"]
[ext_resource type="PackedScene" uid="uid://c3q8raepc1mn0" path="res://scenes/objects/plants/watering_particles.tscn" id="2_ofjf8"]
[ext_resource type="PackedScene" uid="uid://cpb8guv6tlrqc" path="res://scenes/objects/plants/flowering_particles.tscn" id="3_ofjf8"]
[ext_resource type="PackedScene" uid="uid://dvu65f1ol16vv" path="res://scenes/objects/plants/grow_cycle_component.tscn" id="5_q3ekf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ucl7"]
size = Vector2(13, 8)

[node name="Corn" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hgaca")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_hm4is")
hframes = 6
vframes = 2
frame = 1

[node name="WateringParticles" parent="." instance=ExtResource("2_ofjf8")]

[node name="FloweringParticles" parent="." instance=ExtResource("3_ofjf8")]

[node name="GrowCycleComponent" parent="." instance=ExtResource("5_q3ekf")]

[node name="HurtComponent" parent="." instance=ExtResource("2_aphyd")]
position = Vector2(0, -4)
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_5ucl7")
